deployment/ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: wasmws
spec:
  template:
    metadata:
      annotations:
        features.knative.dev/superpod: "Enabled"
        autoscaling.knative.dev/metric: "memory"
        autoscaling.knative.dev/target: "13500"
        autoscaling.knative.dev/target-burst-capacity: "2500"
        autoscaling.knative.dev/min-scale: "14"
        autoscaling.knative.dev/max-scale: "17"
    spec:
      concurrentResourceRequest: 15000
      queueDepthResourceUnits: 950000000000000000
      resourceUtilizationThreshold: 20
      containers:
        - image: aminb7/wasm_ws:benchmarks_wasmedge_v1
          ports:
          - containerPort: 8095
          readinessProbe:
            httpGet:
              port: 8086
              path: "/ready"
            periodSeconds: 1
          resources:
            requests:
              cpu: "6250m"
              memory: "13500Mi"
          volumeMounts:
            - mountPath: /data
              name: wasm-cgroup
              readOnly: false
            # - name: cephfs-pvc
            #   mountPath: /functions
          env:
            - name: LOG_LEVEL
              value: "info"
            - name: POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: WEBSERVER_HOST
              value: ""
            - name: WEBSERVER_PORT
              value: "8095"
            - name: WASM_RUNTIME
              value: "wasmedge"
            - name: READINESS_WINDOW
              value: "5"
            - name: READINESS_UTILIZATION_TRESHOLD
              value: "0.9"
            - name: READINESS_RAND_TRESHOLD
              value: "40"
            - name: GC_UTILIZATION_TRESHOLD
              value: "0.5"
            - name: MEMORY_LIMIT
              value: "15000"
            - name: HEALTHCHECK_HOST
              value: ""
            - name: HEALTHCHECK_PORT
              value: "8086"
            - name: METRICS_COLLECTION_WINDOW
              value: "5"
            - name: REPORTING_PERIOD_MS
              value: "50"
            - name: QP_HOST
              value: "ws://127.0.0.1"
            - name: QP_PORT
              value: "9096"
            - name: MAX_RETRIES
              value: "5"
            - name: RETRY_DELAY_SEC
              value: "2"

      volumes:
        - name: wasm-cgroup
          persistentVolumeClaim:
            claimName: wasm-cgroup-pv-claim
            readOnly: false
        # - name: cephfs-pvc
        #   persistentVolumeClaim:
        #     claimName: wasmws-cephfs-pvc
